src/tests/snapshots/cendol__tests__pp_computed_include__computed_include.snap
---
source: src/tests/pp_computed_include.rs
assertion_line: 17
expression: "(tokens, diags)"
---
- []
- - "Fatal Error: InvalidIncludePath"
