src/tests/snapshots/cendol__tests__pp_computed_include__computed_include_empty.snap
---
source: src/tests/pp_computed_include.rs
expression: "(tokens, diags)"
---
- []
- - "Fatal Error: InvalidIncludePath"
