src/tests/snapshots/cendol__tests__pp_computed_include__computed_include_extra_tokens_angled.snap
---
source: src/tests/pp_computed_include.rs
assertion_line: 107
expression: "(tokens, diags)"
---
- []
- - "Fatal Error: ExpectedEod"
