src/tests/snapshots/cendol__tests__pp_computed_include__computed_include_invalid_expansion.snap
---
source: src/tests/pp_computed_include.rs
assertion_line: 66
expression: "(tokens, diags)"
---
- []
- - "Fatal Error: InvalidIncludePath"
