src/tests/snapshots/cendol__tests__pp_computed_include__computed_include_quoted.snap
---
source: src/tests/pp_computed_include.rs
expression: "(tokens, diags)"
---
- - kind: Identifier
    text: int
  - kind: Identifier
    text: quoted
  - kind: Assign
    text: "="
  - kind: Number
    text: "1"
  - kind: Semicolon
    text: ;
- []
